# VoiceInteract_replit

./: .env  INSTALL.md  README.md  app.py  asgi.py  main.py  pyproject.toml  run.py  start.sh  wsgi.py
static/css/: style.css
static/js/: app.js
templates/: index.html
