[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "hypercorn>=0.17.3",
    "jinja2>=3.1.6",
    "openai>=1.74.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.1",
    "websockets>=15.0.1",
    "requests>=2.32.3",
]
